--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Cool site</title>
 </head>
 <body>
     <p>Make sure your pet has plenty of <i><b>fresh water</i> during hot weather.</p></b>
